# cjm-dev-graph-schema

./: README.md  pyproject.toml
cjm_dev_graph_schema/: aliases.py  identity.py  nodes.py  predicates.py  vocab.py
tests/: test_code_nodes.py  test_entity.py  test_fine_nodes.py  test_nodes.py  test_predicates.py
